# oraclous-backend

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  .stack-env.fe-target  CLAUDE.md  FUCK_CLAUDE_FUCK_PAPERCLIP.md  README.md  conftest.py  pyproject.toml  pytest.ini  ruff.toml
services/application-gateway-service/: Dockerfile  README.md  pyproject.toml
services/application-gateway-service/migrations/: env.py
services/application-gateway-service/migrations/versions/: 0001_integration_keys.py  0002_published_agents.py  0003_chat.py  0004_webhook_subscriptions.py  0005_chat_message_rating.py  0006_enable_rls.py
services/application-gateway-service/src/oraclous_application_gateway_service/: __init__.py  main.py
services/application-gateway-service/tests/: conftest.py
services/application-gateway-service/tests/integration/: test_aggregated_health.py  test_edge_auth.py  test_edge_protection_wiring.py  test_error_envelope_conformance.py  test_gateway_rls_backstop.py  test_pagination.py  test_proxy.py  test_routing_cors.py  test_webhook_signature_schemes.py
services/application-gateway-service/tests/smoke/: smoke.sh
services/application-gateway-service/tests/unit/: test_agent_cors.py  test_chat_context.py  test_chat_routes.py  test_chat_turn_service.py  test_config.py  test_cors_policy.py  test_edge_headers.py  test_edge_middleware.py  test_edge_principal_key.py  test_edge_protection.py  test_envelope_http.py  test_envelope_translate.py  test_existence_hiding.py  test_framework_native_errors.py  test_gateway_failclosed_secrets.py  test_gateway_jwt_aud_iss.py  test_gateway_rls_lifespan.py  test_health.py  test_health_service.py  test_integration_key.py  test_integration_key_auth.py  test_invoke_routes.py  test_invoke_service.py  test_management_routes.py  test_mcp_protocol.py  test_mcp_routes.py  test_mcp_service.py  test_method_hint.py  test_openapi_contract.py  test_rate_limit_store.py  test_request_id.py  test_roles.py  test_route_table.py  test_sensitive_data_never_leaks.py  test_validation_failed_details.py  test_validation_passthrough.py  test_webhook_ingress_service.py  test_webhook_routes.py  test_webhook_signature.py  test_webhook_subscription_service.py
services/auth-service/: Dockerfile  README.md  pyproject.toml
services/auth-service/migrations/: env.py
services/auth-service/migrations/versions/: 0001_initial.py  0002_organisations.py  0003_invitations.py  0004_principal_type.py  0005_oauth.py  0006_audit.py  0007_enable_rls.py
services/auth-service/src/oraclous_auth_service/: __init__.py  main.py
services/auth-service/tests/: conftest.py
services/auth-service/tests/integration/: conftest.py  test_audit_and_hardening.py  test_invitation_api.py  test_member_api.py  test_oauth_api.py  test_org_admin_role_enforcement.py  test_org_api.py  test_postgres_credential_store.py  test_refresh_revalidates_org_membership.py  test_service_account_api.py  test_user_auth_api.py
services/auth-service/tests/organization_isolation/: test_agent_credstore_admin_org_scoping.py  test_agent_rls_backstop_isolation.py
services/auth-service/tests/smoke/: smoke.sh
services/auth-service/tests/unit/: test_agent_credential_lifecycle.py  test_agent_token_endpoints.py  test_agent_token_issuance.py  test_agent_token_org_claim_forward_path.py  test_agent_token_rate_limiter.py  test_auth_failclosed_secrets.py  test_auth_readiness_health.py  test_invitations_domain.py  test_jwt_aud_iss_issuer.py  test_oauth_domain.py  test_organisations_domain.py  test_user_identity.py  test_user_token_org_role.py
services/capability-registry-service/: Dockerfile  README.md  pyproject.toml
services/capability-registry-service/migrations/: env.py
services/capability-registry-service/migrations/versions/: 0001_initial.py  0002_tool_instances.py  0003_executions.py  0004_descriptor_status.py  0005_harness_graph_binding.py  0006_enable_rls.py  0007_delivery_state.py
services/capability-registry-service/src/oraclous_capability_registry_service/: __init__.py  main.py
services/capability-registry-service/tests/: conftest.py
services/capability-registry-service/tests/integration/: test_binding_api.py  test_capability_api.py  test_delivery_state_repo.py  test_execution_api.py  test_http_connectors.py  test_instance_api.py  test_knowledge_retriever_capability.py  test_mcp_import_api.py  test_mysql_connector.py  test_tool_registry_api.py
services/capability-registry-service/tests/organization_isolation/: test_capreg_rls_backstop_isolation.py
services/capability-registry-service/tests/smoke/: smoke.sh  smoke_real_broker.sh
services/capability-registry-service/tests/unit/: test_capability_model_org_scoping.py  test_capreg_readiness_health.py  test_capreg_standard_tools.py  test_credential_client.py  test_delivery_delta.py  test_egress.py  test_execution_approval_gate.py  test_executor.py  test_factory_mcp_dispatch.py  test_fake_broker_failclosed.py  test_federated_search_connector.py  test_file_tools_working_dir.py  test_find_similar_connector.py  test_generic_rest_connector.py  test_github_sink_connector.py  test_hashing.py  (+20 more)
services/credential-broker-service/: Dockerfile  README.md  pyproject.toml
services/credential-broker-service/migrations/: env.py
services/credential-broker-service/tests/: conftest.py
services/execution-engine-service/: Dockerfile  README.md  pyproject.toml
services/execution-engine-service/migrations/: env.py
services/execution-engine-service/tests/: conftest.py
services/harness-runtime-service/: Dockerfile  README.md  pyproject.toml
services/harness-runtime-service/migrations/: env.py
services/harness-runtime-service/tests/: conftest.py
services/knowledge-graph-service/: Dockerfile  README.md  alembic.ini  openapi-internal.yaml  pyproject.toml
services/knowledge-graph-service/migrations/: env.py
services/knowledge-graph-service/scripts/: seed_dev.py
services/knowledge-graph-service/tests/: conftest.py
services/knowledge-retriever-service/: Dockerfile  README.md  pyproject.toml
services/knowledge-retriever-service/tests/: conftest.py
(+1001 files in other folders)
