[project]
name = "oraclous-backend"
version = "0.0.0"
description = "Oraclous Platform backend — substrate, capability registry, harness runtime, execution engine, and application gateway."
requires-python = "==3.12.*"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[dependency-groups]
dev = [
    "ruff==0.15.9",
    "pytest==8.4.1",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
    "import-linter>=2.0,<3.0",
    "mypy>=1.11,<2.0",
    "testcontainers>=4.8,<5.0",
    "neo4j>=5.23,<6.0",
    # neo4j-graphrag: legacy multi-tenant components compose its retrievers /
    # writer (ORA-18 / A3 Lift). The SUT modules import VectorRetriever /
    # VectorCypherRetriever / HybridRetriever / Neo4jWriter at module level so
    # tests can monkeypatch them. Code-reviewer to confirm whether to also
    # pin into the per-service `dependencies` lists for production install.
    "neo4j-graphrag>=1.0,<2.0",
    "redis>=5.0,<7.0",
    "psycopg[binary]>=3.2,<4.0",
    "PyYAML>=6.0,<7.0",
    "jsonschema>=4.21,<5.0",
    "alembic>=1.16,<2.0",
    "asyncpg>=0.30.0,<1.0",
    "aiomysql>=0.2,<0.3",
]

[tool.mypy]
python_version = "3.12"
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
warn_unused_configs = true
# Alembic migration scripts and per-service test trees are not importable library
# code and collide on shared module names (every service ships a `migrations/env.py`
# and a `tests/.../conftest.py`), which aborts a whole-tree `mypy services packages`
# run before any real checking happens. They are excluded from the type gate.
exclude = '/(migrations|tests)/'

# --- WP-7 type-check ratchet (grade-A A6) ----------------------------------
# CI runs `uv run mypy services packages` (lint job). The shared `packages/` and the
# already-clean `auth-service` + `knowledge-retriever-service` are type-GATED now
# (errors fail CI). The other six services are NOT yet typed — their src carries
# ~352 real-but-not-yet-fixed mypy errors — so they are kept lenient via
# `ignore_errors = true` below. RATCHET: fix one service's errors, then delete its
# override block here so the gate starts enforcing it. Do NOT widen the lenient set.
# Tighten further (e.g. `disallow_untyped_defs`) only per-package, one at a time,
# after a service is error-free. No bare `# type: ignore` — always a [error-code].
[[tool.mypy.overrides]]
module = [
    "oraclous_application_gateway_service.*",
    "oraclous_capability_registry_service.*",
    "oraclous_credential_broker_service.*",
    "oraclous_execution_engine_service.*",
    "oraclous_harness_runtime_service.*",
    "oraclous_knowledge_graph_service.*",
]
ignore_errors = true

# Enforces the four-layer architecture (CLAUDE.md §3.1 / ADR-001): imports flow
# downward only, and shared packages never import services. Run: uv run lint-imports
[tool.importlinter]
root_packages = [
    "oraclous_substrate",
    "oraclous_governance",
    "oraclous_rebac",
    "oraclous_telemetry",
    "oraclous_errors",
    "oraclous_auth_service",
    "oraclous_credential_broker_service",
    "oraclous_knowledge_graph_service",
    "oraclous_knowledge_retriever_service",
    "oraclous_capability_registry_service",
    "oraclous_harness_runtime_service",
    "oraclous_execution_engine_service",
    "oraclous_application_gateway_service",
]

[[tool.importlinter.contracts]]
name = "Four-layer architecture — imports flow downward only"
type = "layers"
layers = [
    "oraclous_application_gateway_service",
    "oraclous_harness_runtime_service | oraclous_execution_engine_service",
    "oraclous_capability_registry_service",
    "oraclous_auth_service | oraclous_credential_broker_service | oraclous_knowledge_graph_service | oraclous_knowledge_retriever_service",
]

[[tool.importlinter.contracts]]
name = "Shared packages must not import services"
type = "forbidden"
source_modules = [
    "oraclous_substrate",
    "oraclous_governance",
    "oraclous_rebac",
    "oraclous_telemetry",
    "oraclous_errors",
]
forbidden_modules = [
    "oraclous_auth_service",
    "oraclous_credential_broker_service",
    "oraclous_knowledge_graph_service",
    "oraclous_knowledge_retriever_service",
    "oraclous_capability_registry_service",
    "oraclous_harness_runtime_service",
    "oraclous_execution_engine_service",
    "oraclous_application_gateway_service",
]
