[project]
name = "oraclous-backend"
version = "0.0.0"
description = "Oraclous Platform backend — substrate, capability registry, harness runtime, execution engine, and application gateway."
requires-python = "==3.12.*"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["packages/*", "services/*"]

[dependency-groups]
dev = [
    "ruff==0.15.9",
    "pytest==8.4.1",
    "pytest-asyncio>=0.23,<1.0",
    "httpx>=0.27,<1.0",
    "import-linter>=2.0,<3.0",
    "mypy>=1.11,<2.0",
    "testcontainers>=4.8,<5.0",
    "neo4j>=5.23,<6.0",
    # neo4j-graphrag: legacy multi-tenant components compose its retrievers /
    # writer (ORA-18 / A3 Lift). The SUT modules import VectorRetriever /
    # VectorCypherRetriever / HybridRetriever / Neo4jWriter at module level so
    # tests can monkeypatch them. Code-reviewer to confirm whether to also
    # pin into the per-service `dependencies` lists for production install.
    "neo4j-graphrag>=1.0,<2.0",
    "redis>=5.0,<7.0",
    "psycopg[binary]>=3.2,<4.0",
    "PyYAML>=6.0,<7.0",
    "jsonschema>=4.21,<5.0",
    "alembic>=1.16,<2.0",
    "asyncpg>=0.30.0,<1.0",
    "aiomysql>=0.2,<0.3",
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
warn_unused_configs = true
# Alembic migration scripts and per-service test trees are not importable library
# code and collide on shared module names (every service ships a `migrations/env.py`
# and a `tests/.../conftest.py`), which aborts a whole-tree `mypy services packages`
# run before any real checking happens. They are excluded from the type gate.
exclude = '/(migrations|tests)/'

# croniter ships no type stubs. ignore_missing_imports (above) covers import-not-found but NOT
# import-untyped for an installed-but-untyped lib, so mypy flags `import croniter`. The repo's
# stance is to tolerate untyped 3rd-party (ignore_missing_imports) rather than add per-lib stub
# deps — follow croniter as untyped (Any) instead of erroring. Scoped to croniter so the gate
# still flags any OTHER untyped import going forward.
[[tool.mypy.overrides]]
module = ["croniter", "croniter.*"]
follow_untyped_imports = true

# --- type-check ratchet COMPLETE (#366) -------------------------------------
# CI runs `uv run mypy services packages` (lint job) and it is now error-free across the shared
# `packages/` AND every service — there is no lenient set. The last three (knowledge-graph,
# harness-runtime, execution-engine) were real-refactored to clear their errors (knowledge-graph: a
# recipe-engine writer `Protocol` + a Redis-lock-client `Protocol` + concrete ip-address types;
# harness-runtime: `.sign()` private-key-union isinstance-narrowing + ORM `Mapped[...]` migration;
# execution-engine: `EngineRoundtable | None` / `EngineJob | None` None-flow narrowing + ORM
# `Mapped[...]` migration) and the `ignore_errors` override that exempted them was deleted, so the
# gate now enforces them. No bare `# type: ignore` — every suppression carries an [error-code].
# Tighten further (e.g. `disallow_untyped_defs`) only per-package, one at a time.
# Enforces the four-layer architecture (CLAUDE.md §3.1 / ADR-001): imports flow
# downward only, and shared packages never import services. Run: uv run lint-imports
[tool.importlinter]
root_packages = [
    "oraclous_substrate",
    "oraclous_governance",
    "oraclous_rebac",
    "oraclous_telemetry",
    "oraclous_errors",
    "oraclous_auth_service",
    "oraclous_credential_broker_service",
    "oraclous_knowledge_graph_service",
    "oraclous_knowledge_retriever_service",
    "oraclous_capability_registry_service",
    "oraclous_harness_runtime_service",
    "oraclous_execution_engine_service",
    "oraclous_application_gateway_service",
]

[[tool.importlinter.contracts]]
name = "Four-layer architecture — imports flow downward only"
type = "layers"
layers = [
    "oraclous_application_gateway_service",
    "oraclous_harness_runtime_service | oraclous_execution_engine_service",
    "oraclous_capability_registry_service",
    "oraclous_auth_service | oraclous_credential_broker_service | oraclous_knowledge_graph_service | oraclous_knowledge_retriever_service",
]

[[tool.importlinter.contracts]]
name = "Shared packages must not import services"
type = "forbidden"
source_modules = [
    "oraclous_substrate",
    "oraclous_governance",
    "oraclous_rebac",
    "oraclous_telemetry",
    "oraclous_errors",
]
forbidden_modules = [
    "oraclous_auth_service",
    "oraclous_credential_broker_service",
    "oraclous_knowledge_graph_service",
    "oraclous_knowledge_retriever_service",
    "oraclous_capability_registry_service",
    "oraclous_harness_runtime_service",
    "oraclous_execution_engine_service",
    "oraclous_application_gateway_service",
]

# WP-9: the "Four-layer" layers contract above groups whole SERVICES as layers,
# but services are HTTP-coupled with zero cross-service Python imports, so a
# `|`-grouped layer never holds its siblings independent. These two contracts
# add the real constraints the layers contract cannot express.

# Layer-1 substrate services must never import one another (HTTP-only coupling).
# A regression — e.g. auth importing credential-broker as a library — fails here.
[[tool.importlinter.contracts]]
name = "Layer-1 substrate services are independent (no intra-layer imports)"
type = "independence"
modules = [
    "oraclous_auth_service",
    "oraclous_credential_broker_service",
    "oraclous_knowledge_graph_service",
    "oraclous_knowledge_retriever_service",
]

# Layer-3 pair must never import one another (the execution-engine orchestrates
# the harness runtime over HTTP, never as a Python import, and vice versa).
[[tool.importlinter.contracts]]
name = "Layer-3 services are independent (harness vs execution-engine)"
type = "independence"
modules = [
    "oraclous_harness_runtime_service",
    "oraclous_execution_engine_service",
]

# Pin the shared-kernel DAG so a future cycle among the shared packages is
# caught immediately. Actual edges today (importer -> importee): telemetry ->
# errors; substrate -> governance; rebac -> substrate. `errors` is the floor;
# `telemetry` sits above it; `governance` is independent of both and forms the
# base alongside the telemetry tier; `substrate` sits above governance; `rebac`
# sits at the top above substrate. Because a `layers` contract also forbids any
# import between modules listed in the SAME `|`-group, only modules with no edge
# between them are grouped — telemetry and errors are kept in separate tiers
# precisely because telemetry imports errors. Tiers are listed high -> low.
[[tool.importlinter.contracts]]
name = "Shared kernel packages form an acyclic downward DAG"
type = "layers"
layers = [
    "oraclous_rebac",
    "oraclous_substrate",
    "oraclous_governance | oraclous_telemetry",
    "oraclous_errors",
]
