[project]
name = "oraclous-application-gateway-service"
version = "0.0.0"
description = "Application gateway — single reverse-proxy edge fronting the backend services; R3.5 service #6."
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
    "httpx>=0.27,<1.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "pyyaml>=6.0,<7.0",
    "redis>=5.0,<7.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "oraclous-governance",
    "oraclous-errors",
    "oraclous-telemetry",
]

[tool.uv.sources]
oraclous-governance = { workspace = true }
oraclous-errors = { workspace = true }
oraclous-telemetry = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraclous_application_gateway_service"]
