[project]
name = "oraclous-auth-service"
version = "0.0.0"
description = "Substrate layer; target release R1."
requires-python = "==3.12.*"
dependencies = [
    "sqlalchemy>=2.0,<3.0",
    "bcrypt>=4.1,<5.0",
    "asyncpg>=0.29,<1.0",
    "fastapi>=0.115,<1.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "slowapi>=0.1.9,<1.0",
    "redis>=5.0,<7.0",
    "httpx>=0.27,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraclous_auth_service"]
