[project]
name = "oraclous-auth-service"
version = "0.0.0"
description = "Substrate identity service (users, agents, service-accounts, orgs); R3.5 service #3."
requires-python = "==3.12.*"
dependencies = [
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "bcrypt>=4.1,<5.0",
    "asyncpg>=0.29,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.16,<2.0",
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "slowapi>=0.1.9,<1.0",
    "redis>=5.0,<7.0",
    "httpx>=0.27,<1.0",
    "oraclous-telemetry",
]

[tool.uv.sources]
oraclous-telemetry = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraclous_auth_service"]
