[project]
name = "oraclous-capability-registry-service"
version = "0.0.0"
description = "Capability registry + tools + connectors (port of oraclous-core-service); R3.5 service #5."
requires-python = "==3.12.*"
dependencies = [
    "pydantic-settings>=2.0,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<0.31",
    "aiomysql>=0.2,<0.3",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.16,<2.0",
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "uvicorn[standard]>=0.32,<1.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "httpx>=0.27,<1.0",
    "oraclous-governance",
    # ADR-030: the async RLS GUC-binding seam (oraclous_substrate.access_async — build_rls_engine,
    # org_scope, install_org_guc_guard, assert_non_bypassing_role, provision_app_role) + the RLS
    # policy applier (oraclous_substrate.schema.postgres.enable_rls_on).
    "oraclous-substrate",
    "oraclous-telemetry",
]

[tool.uv.sources]
oraclous-governance = { workspace = true }
oraclous-substrate = { workspace = true }
oraclous-telemetry = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraclous_capability_registry_service"]
