[project]
name = "oraclous-credential-broker-service"
version = "0.0.0"
description = "Substrate credential broker (encrypted credential store + delegation); R3.5 service #4."
requires-python = "==3.12.*"
dependencies = [
    "pydantic-settings>=2.0,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<0.31",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.16,<2.0",
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
    "cryptography>=43,<46",
    "httpx>=0.27,<1.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "oraclous-governance",
    "oraclous-telemetry",
    # ADR-030: the async RLS GUC-binding seam (oraclous_substrate.access_async) +
    # enable_rls_on, wired into the session factory so every request-path/worker
    # transaction binds app.current_organisation_id for the Postgres RLS backstop.
    "oraclous-substrate",
]

[tool.uv.sources]
oraclous-governance = { workspace = true }
oraclous-telemetry = { workspace = true }
oraclous-substrate = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraclous_credential_broker_service"]
