[project]
name = "oraclous-execution-engine-service"
version = "0.0.0"
description = "Harness Runtime layer; target release R5."
requires-python = "==3.12.*"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraclous_execution_engine_service"]
