[project]
name = "oraclous-harness-runtime-service"
version = "0.0.0"
description = "Harness Runtime layer; target release R4."
requires-python = "==3.12.*"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraclous_harness_runtime_service"]
