[project]
name = "oraclous-harness-runtime-service"
version = "0.1.0"
description = "Harness Runtime layer (R4) — loads an OHM and runs the agent tool-use loop."
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
    "httpx>=0.27,<1.0",
    "pyyaml>=6.0,<7.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.13,<2.0",
    "oraclous-governance",
    "oraclous-substrate",
    "oraclous-telemetry",
    "oraclous-ohm",
    "python-jose[cryptography]>=3.3,<4.0",
    "cryptography>=42,<46",
]

[tool.uv.sources]
oraclous-governance = { workspace = true }
oraclous-substrate = { workspace = true }
oraclous-telemetry = { workspace = true }
oraclous-ohm = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraclous_harness_runtime_service"]
