[project]
name = "oraclous-knowledge-graph-service"
version = "0.0.0"
description = "Knowledge graph write/ingestion service (R3.5 service #1)."
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.29,<1.0",
    "psycopg[binary]>=3.2,<4.0",
    "alembic>=1.16,<2.0",
    "uvicorn[standard]>=0.30,<1.0",
    "httpx>=0.27,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "neo4j>=5.23,<6.0",
    "neo4j-graphrag>=1.0,<2.0",
    "celery>=5.3,<6.0",
    "redis>=5.0,<7.0",
    "pypdf>=4.0,<6.0",
    "python-docx>=1.1,<2.0",
    "jsonschema>=4.21,<5.0",
    "tree-sitter>=0.23,<0.25",
    "tree-sitter-python>=0.23,<0.24",
    "tree-sitter-javascript>=0.23,<0.24",
    "tree-sitter-typescript>=0.23,<0.24",
    "oraclous-governance",
    "oraclous-substrate",
]

[tool.uv.sources]
oraclous-governance = { workspace = true }
oraclous-substrate = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraclous_knowledge_graph_service"]
