[project]
name = "oraclous-knowledge-retriever-service"
version = "0.0.0"
description = "Substrate layer; target release R3."
requires-python = "==3.12.*"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraclous_knowledge_retriever_service"]
