[project]
name = "oraclous-knowledge-retriever-service"
version = "0.0.0"
description = "Substrate layer; target release R3."
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "httpx>=0.27,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraclous_knowledge_retriever_service"]
