[project]
name = "oraclous-knowledge-retriever-service"
version = "0.0.0"
description = "Knowledge graph read/retrieval service (R3.5 service #2)."
requires-python = "==3.12.*"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "uvicorn[standard]>=0.30,<1.0",
    "httpx>=0.27,<1.0",
    "neo4j>=5.23,<6.0",
    "redis>=5.0,<7.0",
    "openai>=1.40,<2.0",
    "oraclous-governance",
    "oraclous-substrate",
    "oraclous-rebac",
    "python-jose[cryptography]>=3.3,<4.0",
    "oraclous-telemetry",
]

[tool.uv.sources]
oraclous-governance = { workspace = true }
oraclous-substrate = { workspace = true }
oraclous-rebac = { workspace = true }
oraclous-telemetry = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/oraclous_knowledge_retriever_service"]
